--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,4 @@ script:
   - python3.8 -c "import platform;print(platform.python_version())"
   - python3.8 -c "import platform;print(platform.python_compiler())"
   - python3.8 -c "import platform;print(platform.uname())"
+  - cibuildwheel --platform auto --output-dir Slycot_wheel --print-build-identifiers Slycot/
